# backend/gen/http/exercise/server/encode_decode.go
@@ -12,30 +12,31 @@ import (
 	"errors"
 	"io"
 	"net/http"
+	"strconv"
 
 	exercise "github.com/GrudTrigger/training_tracker/backend/gen/exercise"
 	goahttp "goa.design/goa/v3/http"
 	goa "goa.design/goa/v3/pkg"
 )
 
-// EncodeCreateResponse returns an encoder for responses returned by the
-// exercise create endpoint.
-func EncodeCreateResponse(encoder func(context.Context, http.ResponseWriter) goahttp.Encoder) func(context.Context, http.ResponseWriter, any) error {
+// EncodeExerciseCreateResponse returns an encoder for responses returned by
+// the exercise exercise/create endpoint.
+func EncodeExerciseCreateResponse(encoder func(context.Context, http.ResponseWriter) goahttp.Encoder) func(context.Context, http.ResponseWriter, any) error {
 	return func(ctx context.Context, w http.ResponseWriter, v any) error {
 		res, _ := v.(*exercise.ExerciseList)
 		enc := encoder(ctx, w)
-		body := NewCreateResponseBody(res)
+		body := NewExerciseCreateResponseBody(res)
 		w.WriteHeader(http.StatusCreated)
 		return enc.Encode(body)
 	}
 }
 
-// DecodeCreateRequest returns a decoder for requests sent to the exercise
-// create endpoint.
-func DecodeCreateRequest(mux goahttp.Muxer, decoder func(*http.Request) goahttp.Decoder) func(*http.Request) (*exercise.ExerciseListPayload, error) {
+// DecodeExerciseCreateRequest returns a decoder for requests sent to the
+// exercise exercise/create endpoint.
+func DecodeExerciseCreateRequest(mux goahttp.Muxer, decoder func(*http.Request) goahttp.Decoder) func(*http.Request) (*exercise.ExerciseListPayload, error) {
 	return func(r *http.Request) (*exercise.ExerciseListPayload, error) {
 		var (
-			body CreateRequestBody
+			body ExerciseCreateRequestBody
 			err  error
 		)
 		err = decoder(r).Decode(&body)
@@ -49,19 +50,19 @@ func DecodeCreateRequest(mux goahttp.Muxer, decoder func(*http.Request) goahttp.
 			}
 			return nil, goa.DecodePayloadError(err.Error())
 		}
-		err = ValidateCreateRequestBody(&body)
+		err = ValidateExerciseCreateRequestBody(&body)
 		if err != nil {
 			return nil, err
 		}
-		payload := NewCreateExerciseListPayload(&body)
+		payload := NewExerciseCreateExerciseListPayload(&body)
 
 		return payload, nil
 	}
 }
 
-// EncodeCreateError returns an encoder for errors returned by the create
-// exercise endpoint.
-func EncodeCreateError(encoder func(context.Context, http.ResponseWriter) goahttp.Encoder, formatter func(ctx context.Context, err error) goahttp.Statuser) func(context.Context, http.ResponseWriter, error) error {
+// EncodeExerciseCreateError returns an encoder for errors returned by the
+// exercise/create exercise endpoint.
+func EncodeExerciseCreateError(encoder func(context.Context, http.ResponseWriter) goahttp.Encoder, formatter func(ctx context.Context, err error) goahttp.Statuser) func(context.Context, http.ResponseWriter, error) error {
 	encodeError := goahttp.ErrorEncoder(encoder, formatter)
 	return func(ctx context.Context, w http.ResponseWriter, v error) error {
 		var en goa.GoaErrorNamer
@@ -77,7 +78,7 @@ func EncodeCreateError(encoder func(context.Context, http.ResponseWriter) goahtt
 			if formatter != nil {
 				body = formatter(ctx, res)
 			} else {
-				body = NewCreateBadRequestResponseBody(res)
+				body = NewExerciseCreateBadRequestResponseBody(res)
 			}
 			w.Header().Set("goa-error", res.GoaErrorName())
 			w.WriteHeader(http.StatusBadRequest)
@@ -86,4 +87,75 @@ func EncodeCreateError(encoder func(context.Context, http.ResponseWriter) goahtt
 			return encodeError(ctx, w, v)
 		}
 	}
+}
+
+// EncodeAllResponse returns an encoder for responses returned by the exercise
+// all endpoint.
+func EncodeAllResponse(encoder func(context.Context, http.ResponseWriter) goahttp.Encoder) func(context.Context, http.ResponseWriter, any) error {
+	return func(ctx context.Context, w http.ResponseWriter, v any) error {
+		res, _ := v.([]*exercise.ExerciseList)
+		enc := encoder(ctx, w)
+		body := NewAllResponseBody(res)
+		w.WriteHeader(http.StatusOK)
+		return enc.Encode(body)
+	}
+}
+
+// DecodeAllRequest returns a decoder for requests sent to the exercise all
+// endpoint.
+func DecodeAllRequest(mux goahttp.Muxer, decoder func(*http.Request) goahttp.Decoder) func(*http.Request) (*exercise.AllPayload, error) {
+	return func(r *http.Request) (*exercise.AllPayload, error) {
+		var (
+			limit  int
+			offset int
+			err    error
+		)
+		qp := r.URL.Query()
+		{
+			limitRaw := qp.Get("limit")
+			if limitRaw == "" {
+				limit = 1
+			} else {
+				v, err2 := strconv.ParseInt(limitRaw, 10, strconv.IntSize)
+				if err2 != nil {
+					err = goa.MergeErrors(err, goa.InvalidFieldTypeError("limit", limitRaw, "integer"))
+				}
+				limit = int(v)
+			}
+		}
+		if limit < 1 {
+			err = goa.MergeErrors(err, goa.InvalidRangeError("limit", limit, 1, true))
+		}
+		{
+			offsetRaw := qp.Get("offset")
+			if offsetRaw != "" {
+				v, err2 := strconv.ParseInt(offsetRaw, 10, strconv.IntSize)
+				if err2 != nil {
+					err = goa.MergeErrors(err, goa.InvalidFieldTypeError("offset", offsetRaw, "integer"))
+				}
+				offset = int(v)
+			}
+		}
+		if offset < 0 {
+			err = goa.MergeErrors(err, goa.InvalidRangeError("offset", offset, 0, true))
+		}
+		if err != nil {
+			return nil, err
+		}
+		payload := NewAllPayload(limit, offset)
+
+		return payload, nil
+	}
+}
+
+// marshalExerciseExerciseListToExerciseListResponse builds a value of type
+// *ExerciseListResponse from a value of type *exercise.ExerciseList.
+func marshalExerciseExerciseListToExerciseListResponse(v *exercise.ExerciseList) *ExerciseListResponse {
+	res := &ExerciseListResponse{
+		ID:          v.ID,
+		Title:       v.Title,
+		MuscleGroup: v.MuscleGroup,
+	}
+
+	return res
 }
